--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "add": "^2.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-spreadsheet": "^3.3.0",
     "moment": "^2.29.4",
-    "socket.io": "^4.6.1"
+    "mongoose": "^7.0.3",
+    "or": "^0.2.0",
+    "socket.io": "^4.6.1",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "node server.js"
